--- a/src/components/login.css
+++ b/src/components/login.css
@@ -5,7 +5,7 @@
  min-height: 100vh;
   align-items: center;
   justify-content: center;
-  background-image: url('./src/assets/images/loginimg.jpg'); /* Adjust path if needed */
+  background-image: url('../assets/images/loginimg.jpg'); /* Adjust path if needed */
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
