--- a/src/components/signup.css
+++ b/src/components/signup.css
@@ -13,7 +13,7 @@ body {
 }
 
 .signup-container {
-  background-image: url('./src/assets/images/ba99ed1e-2a0f-4657-b728-27f7ffb7d40b.jpeg'); /* Add your image path here */
+  background-image: url('../assets/images/ba99ed1e-2a0f-4657-b728-27f7ffb7d40b.jpeg'); /* Add your image path here */
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
