--- a/src/components/herosection.css
+++ b/src/components/herosection.css
@@ -23,7 +23,7 @@
   border-radius: 12px;
   z-index: 2;
   opacity: 0;
-  animation: slideUpText 0.6s ease-in-out 1s; 
+  animation: slideUpText 0.6s ease-in-out 1s;
   animation-fill-mode: forwards;
 }
 
@@ -31,10 +31,16 @@
   font-size: 2.8rem;
 }
 
-.hero-image img {
+.hero-image {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  overflow: hidden; /* Hide any overflow */
+}
+
+.hero-image img {
+  width: 100%;
+  height: auto; /* Maintain aspect ratio */
+  object-fit: cover; /* Ensure the image covers the area without stretching */
 }
 
 .hbtn-login {
